--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "db:gen": "drizzle-kit generate",
-    "db:push": "drizzle-kit push",
-    "seed": "tsx scripts/seed.ts"
+    "db:gen": "tsx scripts/drizzle-env.ts && drizzle-kit generate",
+    "db:push": "tsx scripts/drizzle-env.ts && drizzle-kit push",
+    "seed": "tsx scripts/seed.ts",
+    "db:migrate": "tsx scripts/drizzle-env.ts && drizzle-kit migrate"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.34.1",
     "@hookform/resolvers": "^5.2.2",
-    "@libsql/client": "^0.15.15",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.6",
@@ -31,6 +32,7 @@
     "nanoid": "^5.1.6",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
+    "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
@@ -44,11 +46,15 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "drizzle-kit": "^0.31.5",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.20.6",
