Implement basic frontend

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@clerk/backend": "^2.19.3",
     "@clerk/nextjs": "^6.34.1",
     "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-aspect-ratio": "^1.1.8",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
